Minor updates and additions to literature

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -39,6 +39,13 @@
   publisher={Cambridge University Press}
 }
 
+@book{gerber1999populist,
+  title={The populist paradox: Interest group influence and the promise of direct legislation},
+  author={Gerber, Elisabeth R},
+  year={1999},
+  publisher={Princeton University Press}
+}
+
 @article{incerti2019corruption,
   title={Corruption information and vote share: A meta-analysis and lessons for survey experiments},
   author={Incerti, Trevor},
@@ -79,4 +86,25 @@
   author={Rosenbluth, Frances and Shapiro, Ian},
   year={2018},
   publisher={Yale University Press}
+}
+
+@article{smith2002ballot,
+  title={Ballot initiatives and the democratic citizen},
+  author={Smith, Mark A},
+  journal={Journal of Politics},
+  volume={64},
+  number={3},
+  pages={892--903},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
+@article{stratmann2004effectiveness,
+  title={The effectiveness of money in ballot measure campaigns},
+  author={Stratmann, Thomas},
+  journal={S. Cal. L. Rev.},
+  volume={78},
+  pages={1041},
+  year={2004},
+  publisher={HeinOnline}
 }
